--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -55,21 +55,27 @@
         </div>
 
         <div class="flex flex-col">
-          <label class="mb-2 text-bisque font-bold" for="identification">Cédula<span
-              class="text-burnt-umber">*</span></label>
+          <label class="mb-2 text-bisque font-bold" for="identification">
+            Cédula o DIMEX<span class="text-burnt-umber">*</span>
+          </label>
+
           @if (isEditing) {
           <input formControlName="identification" type="text" placeholder="Cédula"
             class="w-full p-2 rounded-md border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba font-bold focus:outline-none focus:border-golden-glow" />
+
           <div class="min-h-[1rem]">
-            @if (userForm.get('identification')?.errors?.['required'] && userForm.get('identification')?.touched) {
+            @if (userForm.get('identification')?.hasError('required') && userForm.get('identification')?.touched) {
             <p class="text-sm text-burnt-umber">Este campo es obligatorio</p>
             }
-            @if (userForm.get('identification')?.errors?.['minlength'] ||
-            userForm.get('identification')?.errors?.['maxlength']) {
-            <p class="text-sm text-burnt-umber">Cédula inválida</p>
+
+            @if (userForm.get('identification')?.hasError('pattern') && userForm.get('identification')?.touched) {
+            <p class="text-sm text-burnt-umber">
+              Cédula o DIMEX inválida.
+            </p>
             }
           </div>
           }
+
           @if (!isEditing) {
           <p class="text-bisque font-bold border-b border-zorba pb-2">
             {{ profileService.user$().identification?.trim() || "No disponible" }}
