--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -1,7 +1,7 @@
 @if(!isrSimulationShown && !ivaSimulationShown) {
-<form [formGroup]="type === 'isr' ? formIsrSimulation : formIvaSimulation" 
-      (ngSubmit)="type === 'isr' ? onSubmit() : onSubmitIVA()"
-      class="flex flex-col space-y-4 bg-crater-brown p-6 rounded-md">
+<form [formGroup]="type === 'isr' ? formIsrSimulation : formIvaSimulation"
+    (ngSubmit)="type === 'isr' ? onSubmitISR() : onSubmitIVA()"
+    class="flex flex-col space-y-4 bg-crater-brown p-6 rounded-md">
     <label for="type" class="text-base font-semibold text-bisque">Tipo de simulación:</label>
     <select id="simulationType"
         class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
@@ -16,11 +16,12 @@
         class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow"
         formControlName="year">
         <option value="" disabled selected>Seleccione un año</option>
-        @for (year of loadInvoicesYears(invoiceService.invoicesByUserId$()); track year) {
+        @for (year of loadInvoicesYears(invoiceService.invoices$()); track year) {
         <option [value]="year">{{ year }}</option>
         }
     </select>
-    @if (formIsrSimulation.get('year')?.invalid && (formIsrSimulation.get('year')?.dirty || formIsrSimulation.get('year')?.touched)) {
+    @if (formIsrSimulation.get('year')?.invalid && (formIsrSimulation.get('year')?.dirty ||
+    formIsrSimulation.get('year')?.touched)) {
     <div class="text-burnt-umber text-sm">El año es obligatorio.</div>
     }
 
@@ -28,7 +29,8 @@
             class="text-burnt-umber">*</span></label>
     <input type="number" id="childrenNumber" formControlName="childrenNumber"
         class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md block w-full p-2 placeholder:text-zorba focus:outline-none focus:border-golden-glow" />
-    @if (formIsrSimulation.get('childrenNumber')?.invalid && (formIsrSimulation.get('childrenNumber')?.dirty || formIsrSimulation.get('childrenNumber')?.touched)) {
+    @if (formIsrSimulation.get('childrenNumber')?.invalid && (formIsrSimulation.get('childrenNumber')?.dirty ||
+    formIsrSimulation.get('childrenNumber')?.touched)) {
     <div class="text-burnt-umber text-sm">El número de hijos es obligatorio.</div>
     }
 
@@ -58,7 +60,8 @@
         <option [value]="year">{{ year }}</option>
         }
     </select>
-    @if (formIvaSimulation.get('year')?.invalid && (formIvaSimulation.get('year')?.dirty || formIvaSimulation.get('year')?.touched)) {
+    @if (formIvaSimulation.get('year')?.invalid && (formIvaSimulation.get('year')?.dirty ||
+    formIvaSimulation.get('year')?.touched)) {
     <div class="text-burnt-umber text-sm">El año es obligatorio.</div>
     }
 
@@ -71,13 +74,13 @@
         <option [value]="month.value">{{ month.name }}</option>
         }
     </select>
-    @if (formIvaSimulation.get('month')?.invalid && (formIvaSimulation.get('month')?.dirty || formIvaSimulation.get('month')?.touched)) {
+    @if (formIvaSimulation.get('month')?.invalid && (formIvaSimulation.get('month')?.dirty ||
+    formIvaSimulation.get('month')?.touched)) {
     <div class="text-burnt-umber text-sm">El mes es obligatorio.</div>
     }
     }
 
-    <button type="submit" 
-        [disabled]="type === 'isr' ? !isIsrFormValid() : !isIvaFormValid()"
+    <button type="submit" [disabled]="type === 'isr' ? !isIsrFormValid() : !isIvaFormValid()"
         class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque disabled:bg-burnt-umber">
         {{ type === 'isr' ? getIsrButtonText() : getIvaButtonText() }}
     </button>
@@ -142,11 +145,8 @@
 
 @if (ivaSimulationShown && ivaSimulation) {
 <div>
-    <app-iva-simulation 
-        [simulation]="ivaSimulation"
-        [simulationPeriod]="getIvaSimulationPeriod()"
-        [simulationName]="getIvaSimulationName()"
-        [simulationIdentification]="getIvaSimulationIdentification()" />
+    <app-iva-simulation [simulation]="ivaSimulation" [simulationPeriod]="getIvaSimulationPeriod()"
+        [simulationName]="getIvaSimulationName()" [simulationIdentification]="getIvaSimulationIdentification()" />
     <div class="flex justify-center mt-4">
         <button (click)="closeSimulation()"
             class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
