--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -29,7 +29,7 @@
     <div class="bg-crater-brown rounded-md p-6 shadow-lg mt-10 ml-44">
         <app-manual-invoices-form [invoiceForm]="invoiceForm" [detailForm]="detailForm" [details]="details"
             (callSaveMethod)="saveInvoice($event)" (callUpdateMethod)="updateInvoice($event)"
-            (callCancelMethod)="cancelUpdate()" [isEditing]="isEditing" [textConfirmButton]="'Guardar'" />
+            (callCancelMethod)="cancelUpdate()" [isEditing]="isEditing" [textConfirmButton]="'Actualizar'" />
     </div>
 </div>
 }
