--- a/src/app/components/user/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/user/reset-password-form/reset-password-form.component.html
@@ -94,7 +94,7 @@
         <button (click)="resetPassword($event)" [disabled]="form.invalid"
           class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco disabled:bg-burnt-umber disabled:text-bisque transition-colors disabled:opacity-80 disabled:cursor-not-allowed"
           type="button">
-          Guardar
+          Actualizar
         </button>
 
         <button (click)="cancel()"
