--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -28,7 +28,7 @@
   <app-modal [hideFooter]="true">
     <div>
       <app-user-form [userForm]="userForm" (callSaveMethod)="saveUser($event)" (callUpdateMethod)="updateUser($event)"
-        [cancelOption]="true" (callCancelMethod)="cancelUpdate()" />
+        [cancelOption]="true" (callCancelMethod)="cancelUpdate()" [sendButtonText]="'Actualizar'" />
     </div>
   </app-modal>
 </ng-template>
