--- a/src/app/components/iva-simulation/section-iva-simulation/section-iva-simulation.component.html
+++ b/src/app/components/iva-simulation/section-iva-simulation/section-iva-simulation.component.html
@@ -92,7 +92,7 @@
                             <tr *ngFor="let row of subsection.tableData.rows; let i = index" class="hover:bg-gray-50">
                                 <td class="border border-crater-brown px-4 py-3 text-crater-brown font-medium">{{ row }}</td>
                                 <td *ngFor="let header of subsection.tableData.headers.slice(1); let j = index" class="border border-crater-brown px-4 py-3 text-center">
-                                    <span class="w-full p-2 rounded text-center text-crater-brown font-medium">
+                                    <span class="w-full px-4 py-2 bg-zorba rounded-md text-center text-crater-brown font-medium">
                                         ₡{{ (subsection.tableData.values[i] ? (subsection.tableData.values[i][header] || 0) : 0) | number:'1.0-0' }}
                                     </span>
                                 </td>
@@ -135,7 +135,7 @@
                                     <tr *ngFor="let row of nested.tableData.rows; let i = index" class="hover:bg-gray-50">
                                         <td class="border border-crater-brown px-4 py-3 text-crater-brown font-medium">{{ row }}</td>
                                         <td *ngFor="let header of nested.tableData.headers.slice(1); let j = index" class="border border-crater-brown px-4 py-3 text-center">
-                                            <span class="w-full p-2 rounded text-center text-crater-brown font-medium">
+                                            <span class="w-full px-4 py-2 bg-zorba rounded-md text-center text-crater-brown font-medium">
                                                 ₡{{ (nested.tableData.values[i] ? (nested.tableData.values[i][header] || 0) : 0) | number:'1.0-0' }}
                                             </span>
                                         </td>
