Add 2% IVA table values and improve simulation layout
Added support for displaying 2% IVA table values in the simulation component. Improved the layout of the IVA simulation view by adding spacing between sections. Updated the service to use a custom source for simulation creation.

--- a/src/app/components/iva-simulation/iva-simulation.component.html
+++ b/src/app/components/iva-simulation/iva-simulation.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div *ngIf="currentSimulation">
+        <div *ngIf="currentSimulation" class="space-y-8">
             <app-section-iva-simulation 
                 [sectionTitle]="ventasSujetasSection.sectionTitle"
                 [hasToggle]="ventasSujetasSection.hasToggle"
@@ -36,12 +36,16 @@
                 [subsections]="ventasSujetasSection.subsections">
             </app-section-iva-simulation>
 
+            <div class="py-4"></div>
+
             <app-tax-base
                 [simulationPeriod]="simulationPeriod"
                 [simulationName]="simulationName"
                 [simulationIdentification]="simulationIdentification"
                 [simulation]="currentSimulation">
             </app-tax-base>
+
+            <div class="py-4"></div>
 
             <app-exempt-sales
                 [simulationPeriod]="simulationPeriod"
@@ -50,12 +54,16 @@
                 [simulation]="currentSimulation">
             </app-exempt-sales>
 
+            <div class="py-4"></div>
+
             <app-sales-not-subject
                 [simulationPeriod]="simulationPeriod"
                 [simulationName]="simulationName"
                 [simulationIdentification]="simulationIdentification"
                 [simulation]="currentSimulation">
             </app-sales-not-subject>
+
+            <div class="py-4"></div>
 
             <app-total-sales
                 [simulationPeriod]="simulationPeriod"
