Add update to search bar placeholder

--- a/src/app/components/goals-list/goals-list.component.html
+++ b/src/app/components/goals-list/goals-list.component.html
@@ -20,7 +20,7 @@
 
       <div class="grid grid-cols-2 gap-3 mb-3">
         <div>
-          <p class="text-crater-brown font-bold text-lg">Tipo de impuesto</p>
+          <p class="text-crater-brown font-bold text-lg">Tipo</p>
           <div class="border-2 border-crater-brown rounded p-2 text-crater-brown font-semibold">
             {{ goal.type }}
           </div>
