--- a/src/app/pages/goals-view/goals-view.component.html
+++ b/src/app/pages/goals-view/goals-view.component.html
@@ -8,7 +8,7 @@
         (keyup)="search($event)" 
         type="text"
         class="bg-crater-brown text-bisque placeholder:text-bisque text-lg font-bold w-full outline-none"
-        placeholder="Buscar por tipo de impuesto"/>
+        placeholder="Buscar por tipo"/>
     </div>
   </div>
 
