--- a/src/app/pages/goals-view/goals-view.component.html
+++ b/src/app/pages/goals-view/goals-view.component.html
@@ -1,3 +1,4 @@
+@defer{
 <div class="p-4 flex flex-col items-center gap-6">
   <div class="mx-auto max-w-3xl w-[400px]">
     <div class="flex items-center bg-crater-brown rounded-md px-4 py-2">
@@ -19,7 +20,7 @@
     />
   </div>
 
-  <div class="flex justify-center mt-3">
+  <div class="flex justify-center mt-12">
     <button 
         (click)="goBack()"
         class="bg-flamenco hover:bg-golden-glow hover:text-flamenco py-2 px-4 rounded-md text-bisque font-bold">
@@ -27,3 +28,6 @@
     </button>
   </div>
 </div>
+} @loading (minimum 1.5s){
+<app-loader></app-loader>
+}
