--- a/src/app/components/card-detail/card-detail.component.html
+++ b/src/app/components/card-detail/card-detail.component.html
@@ -1,5 +1,5 @@
-<div class="bg-crater-brown border-2 border-zorba rounded-md p-2 text-xs text-bisque shadow-sm leading-tight">
-    <div class="font-semibold mb-1">{{ description }}</div>
+<div class="bg-crater-brown border-2 border-zorba rounded-md p-2 text-xs text-bisque shadow-sm leading-tight h-full">
+    <div class="font-semibold mb-1 truncate">{{ description }}</div>
 
     <table class="w-full text-left">
         <tbody>
