--- a/src/app/components/notification-form/notification-form.component.html
+++ b/src/app/components/notification-form/notification-form.component.html
@@ -2,7 +2,7 @@
     <div>
         <h1 class="text-bisque text-xl font-bold">Crear Notificación Global</h1>
     </div>
-    <div class="grid grid-cols-2">
+    <div class="grid grid-cols-2 pt-4">
         <div class="w-full">
             <div class="mb-2">
                 <label class="block my-2 text-base font-bold text-bisque" for="name">Nombre<span
@@ -99,8 +99,9 @@
 
         <div class="col-span-2 flex justify-center items-center w-full">
             <button (click)="callSave()" [disabled]="notificationForm.invalid"
-                class="bg-flamenco text-bisque py-1 px-3 rounded-md cursor-pointer disabled:bg-flamenco disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque font-bold hover:bg-golden-glow hover:text-flamenco transition-colors"
+                class="bg-flamenco text-bisque py-1 px-3 rounded-md cursor-pointer disabled:bg-burnt-umber disabled:opacity-80 disabled:cursor-not-allowed disabled:text-bisque font-bold hover:bg-golden-glow hover:text-flamenco transition-colors"
                 type="button">{{isEditMode ? 'Actualizar' : 'Guardar'}}</button>
+
             @if (cancelOption) {
             <button (click)="callCancel()"
                 class="bg-golden-glow text-crater-brown py-1 px-3 rounded-md cursor-pointer ml-2 font-bold hover:bg-bisque transition-colors"
