--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -70,7 +70,7 @@
                 @if (!selectedNotification.isRead) {
                 <div class="mt-6 pt-4 border-t border-bisque/20">
                     <button (click)="handleMarkAsRead(selectedNotification.id)"
-                        class="px-4 py-2 bg-bisque text-crater-brown rounded-md hover:bg-opacity-90">
+                        class="px-4 py-2 bg-bisque text-crater-brown rounded-md hover:bg-opacity-90 focus:bg-opacity-90 active:bg-opacity-90 golden-glow">
                         Marcar como leída
                     </button>
                 </div>
