Update notification handling and chart sizing
Improves notification selection by passing notification state instead of query params and updates the notification selection logic. Adjusts chart component sizing in reports for better layout consistency. Also updates sidebar section headings based on route names and roles.

--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -21,10 +21,10 @@
       @if (route.data['name'] == "Inicio" && role == "USER") {
       <p class="px-2 font-semibold text-zorba pb-1 pt-3">TRIBUTACIÓN</p>
       }
-      @if (route.data['name'] == "Notificaciones" && role == "USER") {
+      @if (route.data['name'] == "Ver Notificaciones" && role == "USER") {
       <p class="px-2 font-semibold text-zorba pb-1 pt-3">ANALÍTICAS</p>
       }
-      @if (route.data['name'] == "Notificaciones" && role == "SUPER_ADMIN") {
+      @if (route.data['name'] == "Calendario Fiscal" && role == "SUPER_ADMIN") {
       <p class="px-2 font-semibold text-zorba pb-1 pt-3">ANALÍTICAS</p>
       }
       @if (route.data['name'] == "Reportes" && role == "USER") {
