--- a/src/app/pages/reports-user/reports-user.component.html
+++ b/src/app/pages/reports-user/reports-user.component.html
@@ -119,7 +119,7 @@
         class="border border-crater-brown p-4 rounded-md w-[60rem] 2xl:w-[80rem] h-[30rem] 2xl:h-[45rem] mx-auto overflow-auto">
         <div class="h-full w-full flex items-center justify-center">
             @if(hasExpenseCategoriesData()) {
-            <app-chart class="h-full w-full flex flex-col justify-center items-center"
+            <app-chart class="h-[40rem] w-[50rem] flex flex-col justify-center items-center"
                 [labels]="this.reportUserService.invoicesTop5ExpenseCategories$()[0].labels"
                 [datasets]="this.reportUserService.invoicesTop5ExpenseCategories$()[0].datasets" [type]="'pie'">
             </app-chart>
