--- a/src/app/pages/create-simulation/create-simulation.component.html
+++ b/src/app/pages/create-simulation/create-simulation.component.html
@@ -136,7 +136,7 @@
                 Guardar
             </button>
             <button (click)="closeSimulation()"
-                class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
+                class="bg-golden-glow text-crater-brown py-1 px-3 rounded-md cursor-pointer font-bold hover:bg-bisque transition-colors">
                 Regresar
             </button>
         </div>
@@ -157,7 +157,7 @@
             Guardar
         </button>
         <button (click)="closeSimulation()"
-            class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors">
+            class="bg-golden-glow text-crater-brown py-1 px-3 rounded-md cursor-pointer font-bold hover:bg-bisque transition-colors">
             Regresar
         </button>
     </div>
