--- a/src/app/pages/simulation-view/simulation-view.component.html
+++ b/src/app/pages/simulation-view/simulation-view.component.html
@@ -1,7 +1,7 @@
 @defer {
 <div class="p-4">
     <div class="pb-2 justify-between flex flex-row items-end">
-        <h1 class="text-lg text-crater-brown font-bold">{{title}}</h1>
+        <h1 class="text-lg text-crater-brown font-bold">{{ title }}</h1>
         <div class="flex items-center bg-crater-brown rounded-md px-2 py-1">
             <span class="material-symbols-rounded text-2xl pr-2 text-bisque">
                 search
@@ -13,12 +13,16 @@
     </div>
 
     <div>
-        <app-simulation-list 
-        [simulations]="allSimulations()"
-        (generatePdf)="downloadPdf($event)"
-        (generateCsv)="downloadCsv($event)"/>
-        @if(isrService.simulationsIsr$().length) {
-        <app-pagination [service]="isrService" />
+        <app-simulation-list [simulations]="paginatedSimulations()" (generatePdf)="downloadPdf($event)"
+            (generateCsv)="downloadCsv($event)">
+        </app-simulation-list>
+
+        @if(allSimulations().length > 0) {
+        <ng-container>
+            <app-pagination [page]="currentPage()" [totalPages]="totalPages()" [totalElements]="allSimulations().length"
+                [pageSize]="pageSize" [customCall]="true" (pageChange)="onPageChange($event)">
+            </app-pagination>
+        </ng-container>
         }
     </div>
 </div>
