Update invoice form validation and error messages
Replaces min/max validators with regex patterns for numeric fields in invoice and upload-invoices components. Updates email validation to use Validators.email and adjusts error message display logic in manual-invoices-form. Ensures stricter and more accurate form validation for invoice data entry.

--- a/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
+++ b/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
@@ -120,11 +120,11 @@
         placeholder="Correo" />
       @if (invoiceForm.controls['email'].invalid && (invoiceForm.controls['email'].dirty ||
       invoiceForm.controls['email'].touched)) {
+      @if (invoiceForm.controls['email'].errors?.['required']) {
       <div class="text-burnt-umber text-sm">El correo electrónico es obligatorio.</div>
-      }
-      @if (invoiceForm.controls['email'].errors?.['email'] && (invoiceForm.controls['email'].dirty ||
-      invoiceForm.controls['email'].touched)) {
+      } @else if (invoiceForm.controls['email'].errors?.['email']) {
       <div class="text-burnt-umber text-sm">Correo electrónico inválido.</div>
+      }
       }
     </div>
   </div>
