Refactor notification detail to notification component
Replaces NotificationDetailComponent with NotificationComponent, moving and renaming files accordingly. Removes unused SCSS files and updates routes and references to use the new NotificationComponent. Also improves layout and class usage in fiscal calendar and notification components for better consistency and maintainability.

--- a/src/app/components/fiscal-calendar-list/fiscal-calendar-list.component.html
+++ b/src/app/components/fiscal-calendar-list/fiscal-calendar-list.component.html
@@ -22,7 +22,7 @@
                 <td class="p-3" scope="row">{{item.type || 'N/A'}}</td>
                 <td class="p-3 space-x-1">
                     <button (click)="editFiscalCalendar(item)"
-                        class="group bg-flamenco px-2 p-0.5 rounded-md disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-golden-glow hover:bg-bisque ml-2"
+                        class="group bg-flamenco text-bisque hover:bg-golden-glow hover:text-flamenco transition-colors px-2 p-0.5 rounded-md disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-golden-glow ml-2"
                         type="button">
                         <span class="material-symbols-rounded text-lg text-bisque group-hover:text-flamenco">
                             edit
