--- a/src/app/pages/notification/notification.component.html
+++ b/src/app/pages/notification/notification.component.html
@@ -5,7 +5,7 @@
       class="bg-golden-glow rounded-md w-8 h-8 flex items-center justify-center hover:bg-bisque transition-colors">
       <span class="material-symbols-rounded text-crater-brown text-xl">add</span>
     </button>
-    <h1 class="text-lg text-crater-brown font-bold text-center flex-1">Notificaciones</h1>
+    <h1 class="text-lg text-crater-brown font-bold text-start ml-2 flex-1">Notificaciones</h1>
     <div class="flex items-center bg-crater-brown rounded-md px-2 py-1">
       <span class="material-symbols-rounded text-2xl pr-2 text-bisque">
         search
